--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;200;300;400;500;700;900&display=swap"
       rel="stylesheet" />
   </head>
-  <body>
+  <body >
+    <div class="screen">
     <div class="window">
       <header>
         <div class="header">
@@ -132,6 +133,7 @@
         </div>
       </footer>
     </div>
+  </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
